# software

./: CMakeLists.txt  LICENSE
batterymonitor/: CMakeLists.txt  app.cpp  app.h  batteryindicator.cpp  batteryindicator.h  main.cpp  resources.qrc  systemtrayicon.cpp  systemtrayicon.h
